// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-css-prop css prop 1`] = `
"

const SomeComponent = () => {
  return (
    <>
      <div css={(t) => ({ color: t.color.primary })}>123</div>
    </>
  )
}
    
 ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as _jsx } from \\"@querycap-ui/core/jsx-runtime\\";
import { Fragment as _Fragment } from \\"@querycap-ui/core/jsx-runtime\\";

const SomeComponent = () => {
  return _jsx(_Fragment, {
    children: _jsx(\\"div\\", {
      css: t => ({
        color: t.color.primary
      }),
      children: \\"123\\"
    })
  });
};  
  "
`;

exports[`babel-preset-css-prop css prop only 1`] = `
"

const SomeComponent = () => {
  return (
    <div css={(t) => ({ color: t.color.primary })}><span key={\\"a\\"}>1</span><span key={\\"b\\"}>2</span></div>
  )
}
    
 ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as _jsx } from \\"@querycap-ui/core/jsx-runtime\\";
import { jsxs as _jsxs } from \\"@querycap-ui/core/jsx-runtime\\";

const SomeComponent = () => {
  return _jsxs(\\"div\\", {
    css: t => ({
      color: t.color.primary
    }),
    children: [_jsx(\\"span\\", {
      children: \\"1\\"
    }, \\"a\\"), _jsx(\\"span\\", {
      children: \\"2\\"
    }, \\"b\\")]
  });
};  
  "
`;

exports[`babel-preset-css-prop without css prop 1`] = `
"

const SomeComponent = () => {
  return (
    <>
      <div>123</div>
      <span>{undefined}</span>  
      <span v=\\"v\\" key={\\"i\\"} {...v}  />
    </>
  )
}
    
 ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as _jsx } from \\"react/jsx-runtime\\";
import { Fragment as _Fragment } from \\"react/jsx-runtime\\";
import { jsxs as _jsxs } from \\"react/jsx-runtime\\";

const SomeComponent = () => {
  return /*#__PURE__*/_jsxs(_Fragment, {
    children: [/*#__PURE__*/_jsx(\\"div\\", {
      children: \\"123\\"
    }), /*#__PURE__*/_jsx(\\"span\\", {
      children: undefined
    }), /*#__PURE__*/_jsx(\\"span\\", {
      v: \\"v\\",
      ...v
    }, \\"i\\")]
  });
};  
  "
`;
